# post-system-flask

./: pyproject.toml
src/projeto_trimestral/: app.py
src/projeto_trimestral/forms/: Comentario_Form.py  Filtro_Form.py  Login_Form.py  Post_Form.py
src/projeto_trimestral/templates/: base.html  criar_post.html  editar_post.html  feed.html  index.html  perfil.html  post.html  tela_login.html
