[project]
name = "projeto-trimestral"
version = "0.1.0"
description = ""
authors = [
    {name = "Mariana Leitzke",email = "leitzkemariana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_trimestral", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
